objects/QAForm__c.object
<CustomObject>
    <description>Not used</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>WebID__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DA_AcctPlanID__c</fullName>
        <description>Placemark for Account Plan Number - need to make a formula field</description>
        <label>DA Account Plan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Acct_Strategy__c</fullName>
        <label>Acct strategy / follow up actions? (10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_ActionableOpt__c</fullName>
        <label>Actionable Optimization steps? (10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_AdEmailCk__c</fullName>
        <label>Advertising Email Check-in (10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_AdRevUpdt__c</fullName>
        <label>Ad Review Updated (2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DAS_LastUpdt__c</fullName>
        <label>DAS data last updated (5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DMARadius__c</fullName>
        <label>DMA or Radius Targeted details noted (2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DataPtsOpt__c</fullName>
        <label>Reason/Data Pts in Optimize update?(10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DealerLogo__c</fullName>
        <label>Dealer logo noted (2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DocCurNoteStmp__c</fullName>
        <label>Document w/current note date stamp?(5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_DocPresent__c</fullName>
        <label>Documentation Present? (5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_OMS_Geo__c</fullName>
        <label>OMS Geography Noted (2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_OMS_Tag__c</fullName>
        <label>OMS Taglines Noted (2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Overall_Poss__c</fullName>
        <formula>100 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Overall Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Overall_QAPerc__c</fullName>
        <formula>DA_Overall_Tot__c  /  DA_Overall_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Overall QA Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_Overall_Tot__c</fullName>
        <formula>DA_Sec1_Tot__c + DA_Sec2_Tot__c + DA_Sec3_Tot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Overall Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ProdDetNotes__c</fullName>
        <label>Product Specific Detailed Notes? (5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Sec1_Poss__c</fullName>
        <formula>35 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage Score Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Sec1_Tot__c</fullName>
        <label>Advantage Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Sec2_Poss__c</fullName>
        <formula>35 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage and DAP Score Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Sec2_Tot__c</fullName>
        <label>Advantage and DAP Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Sec3_Poss__c</fullName>
        <formula>30*1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advantage - Internal Team Score Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Sec3_Tot__c</fullName>
        <label>Advantage - Internal Team Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Specialist__c</fullName>
        <formula>WebID__r.Online_Marketing_Specialist__r.FirstName &amp; &quot; &quot; &amp;  WebID__r.Online_Marketing_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_SpendLead__c</fullName>
        <label>Spend and Lead Tracking? (5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_TmAA__c</fullName>
        <label>Team with AA on this WebID? (5)</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_TmReptMet__c</fullName>
        <label>Team Reporting Metrics (10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_dealerGoals__c</fullName>
        <label>Are dealer goals expressed? (10)</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Sec1__c</fullName>
        <label>Notes - Section 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Sec2__c</fullName>
        <label>Notes - Section 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Sec3__c</fullName>
        <label>Notes - Section 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SM_Overall_Perc__c</fullName>
        <formula>SM_Overall_Tot__c / SM_Overall_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM Overall Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SM_Overall_Poss__c</fullName>
        <formula>sm_Sec1_Poss__c + sm_Sec2_Poss__c + sm_Sec3_Poss__c + sm_Sec4_Poss__c + sm_Sec5_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM Overall Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SM_Overall_Tot__c</fullName>
        <formula>sm_Sec1_Tot__c +  sm_Sec2_Tot__c + sm_Sec3_Tot__c + sm_Sec4_Tot__c +  sm_Sec5_Tot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM Overall Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SM_Specialist__c</fullName>
        <formula>WebID__r.Social_Media_Specialist__r.FirstName &amp; &quot; &quot; &amp;  WebID__r.Social_Media_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>QA Form</description>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>QAForms</relationshipLabel>
        <relationshipName>QAForms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ems_AA_copied__c</fullName>
        <inlineHelpText>AA copied on final/approved emails, if applicable</inlineHelpText>
        <label>AA copied on final/approved emails(0.5)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_CampName__c</fullName>
        <inlineHelpText>Campaign names referenced correctly in Admin</inlineHelpText>
        <label>Campaign names referenced correctly(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_DealerUpdt__c</fullName>
        <label>Dealer update/approvals populated(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_EMS_Specialst__c</fullName>
        <formula>WebID__r.OwnerMktg_Specialist_lookup__r.FirstName &amp; &quot; &quot; &amp; WebID__r.OwnerMktg_Specialist_lookup__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ems_EmailAppDoc__c</fullName>
        <inlineHelpText>Email approvals documented in ADvantage</inlineHelpText>
        <label>Email Approvals Documented(1.5)</label>
        <picklist>
            <picklistValues>
                <fullName>1.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_EmailGoalPainPt__c</fullName>
        <inlineHelpText>Email goals and pain points populated with qualified information</inlineHelpText>
        <label>Email goal and pain points populated(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_EmailHealth__c</fullName>
        <inlineHelpText>Email account health current and populated with qualified information</inlineHelpText>
        <label>Email Account Health Current(2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_EmailIdeasPushed__c</fullName>
        <inlineHelpText>Email ideas proactively pushed to dealer</inlineHelpText>
        <label>Email ideas pushed to dealer(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_Overall_Poss__c</fullName>
        <formula>10 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Overall Possible</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ems_Overall_QAPerc__c</fullName>
        <formula>ems_Overall_Tot__c / ems_Overall_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Overall QA Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ems_Overall_Tot__c</fullName>
        <formula>ems_Sec1_Tot__c + ems_Sec2_Tot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Overall Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ems_PhoneCon__c</fullName>
        <inlineHelpText>Phone call contact within past 30 days; phone call attemps documented</inlineHelpText>
        <label>Phone call contact within 30 days(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_ROISent__c</fullName>
        <inlineHelpText>ROI sent on time, utilizing correct template and documented in ADvantage</inlineHelpText>
        <label>ROI sent on time(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ems_Sec1_Poss__c</fullName>
        <formula>6 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Health Possible</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ems_Sec1_Tot__c</fullName>
        <label>Account Health Total</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ems_Sec2_Poss__c</fullName>
        <formula>4 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADvantage/Admin Documentation Possible</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ems_Sec2_Tot__c</fullName>
        <label>ADvantage/Admin Total</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_AppMess__c</fullName>
        <inlineHelpText>Appropriate Messaging (clear &amp; concise message, addresses customer concern and/or thanks them for their time)</inlineHelpText>
        <label>Appropriate Messaging(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_Overall_Perc__c</fullName>
        <formula>rm_Overall_Tot__c / rm_Overall_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RepMan Overall Percentage</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rm_Overall_Poss__c</fullName>
        <formula>rm_Sec1_Poss__c + rm_Sec2_Poss__c + rm_Sec3_Poss__c + rm_Sec4_Poss__c + rm_Sec5_Poss__c+ rm_Sec6_Poss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RepMan Overall Possible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Overall_Tot__c</fullName>
        <formula>rm_Sec1_Tot__c + rm_Sec2_Tot__c + rm_Sec3_Tot__c + rm_Sec4_Tot__c + rm_Sec5_Tot__c+ rm_Sec6_Tot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RepMan Overall Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_RateMatch__c</fullName>
        <label>Review Rating matches review content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_Sec1_Poss__c</fullName>
        <formula>25 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Response Eval Total Possible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Sec1_Tot__c</fullName>
        <label>Review Response Eval Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Sec2_Poss__c</fullName>
        <formula>2 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stand Alone Possible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Sec2_Tot__c</fullName>
        <label>Stand Alone Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Sec3_Poss__c</fullName>
        <formula>2 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Website Possible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Sec3_Tot__c</fullName>
        <label>Retail Website Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Specialist__c</fullName>
        <formula>WebID__r.Reputation_Management_Specialist__r.FirstName &amp; &quot; &quot; &amp;  WebID__r.Reputation_Management_Specialist__r.LastName</formula>
        <label>RepMan Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rm_dcc_GYset__c</fullName>
        <label>Admin: Google and Yelp account setup(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_dsr_RespPub__c</fullName>
        <inlineHelpText>Dealer Survey Response: Response publised within 7 day hold period</inlineHelpText>
        <label>Response Published within 7 day hold(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_dsr_SpellGram__c</fullName>
        <inlineHelpText>Dealer Survey Response spelling and grammar</inlineHelpText>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>